testdata/baselines/reference/submodule/compiler/symbolObserverMismatchingPolyfillsWorkTogether.errors.txt
symbolObserverMismatchingPolyfillsWorkTogether.ts(5,14): error TS2717: Subsequent property declarations must have the same type.  Property 'observer' must be of type 'symbol', but here has type 'unique symbol'.


==== symbolObserverMismatchingPolyfillsWorkTogether.ts (1 errors) ====
    interface SymbolConstructor {
        readonly observer: symbol;
    }
    interface SymbolConstructor {
        readonly observer: unique symbol;
                 ~~~~~~~~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'observer' must be of type 'symbol', but here has type 'unique symbol'.
!!! related TS6203 symbolObserverMismatchingPolyfillsWorkTogether.ts:2:14: 'observer' was also declared here.
    }
    
    const obj = {
        [Symbol.observer]: 0
    };